Project4_variables/ec2.tf
resource "aws_instance" "web" {
  ami           = var.ami
  instance_type = var.instance_type

  tags = {
    Name = "My_Instance"
  }
}
